# The-Agentic-Infrastructure-Challenge-

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  README.md  REPORT.md  pyproject.toml
.cursor/: rules
.github/workflows/: main.yml
.qodo/workflows/: chimera_swarm_workflow.md
chimera/: db.py  main.py
chimera/skills/: trend_fetcher.py
chimera/templates/: index.html
project_chimera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research/: architecture_strategy.md  tooling_strategy.md
skills/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_trend_fetcher.py
