[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network - Agentic Infrastructure Challenge"
authors = [
    {name = "Fransi Ayele", email = "fransi@aiqem.tech"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "mcp>=1.0.0",
    "weaviate-client>=4.8.0",
    "redis>=5.0.8",
    "coinbase-agentkit>=0.0.1",
    "langchain>=0.3.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "jinja2>=3.1.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
